= Changelog

== 4.3.1 or higher - upcoming 

* Fix building with debug mode and raw file directories
** See https://github.com/simpligility/android-maven-plugin/pull/649
** contributed by Nathan Toone https://github.com/Toonetown
* Fix continuous integration(use Travis Android support and enable/update ITs)
** See https://github.com/simpligility/android-maven-plugin/pull/641
** contributed by Csaba Kozák https://github.com/WonderCsabo

Planned changes:

* migrate more tests to be instrumentation tests with example projects
** see https://github.com/simpligility/android-maven-plugin/issues/452
* anything else contributed by the community

== 4.3.0 - released 2014-06-15 

https://groups.google.com/d/msg/maven-android-developers/FB4mP5s1kvA/EFxbrnnbca0J[Release Announcement Post]

* Fixed processing of duplicate resources from dependencies
** See https://github.com/simpligility/android-maven-plugin/pull/614
** contributed by Marek Kedzierski https://github.com/kedzie
* Ability to choose the build tools version
** See https://github.com/simpligility/android-maven-plugin/pull/637
** Contributed by Benoit Billington https://github.com/Shusshu
* Added x86_64 and mips64 architectures to NDK support
** see https://github.com/simpligility/android-maven-plugin/pull/634
** Contributed by Marek Kedzierski http://kedzie.github.io/
* Migrated rest of the Google Code project content into site content
** Contributed by Manfred Moser http://www.simpligility.com
* Plugin updates
** Contributed by Manfred Moser http://www.simpligility.com

== 4.2.1 - released 2014-05-07

https://groups.google.com/d/msg/maven-android-developers/HOIC3b7MmoA/Z8XUXpsmT-EJ[Release Announcement Post]

* Refactored code base to com.simpligility to follow groupId
** Contributed by Manfred Moser http://www.simpligility.com
* Fixed NPE for undefined versionNamingPattern in ManifestMojo
** See https://github.com/simpligility/android-maven-plugin/pull/622
** Contributed by Leonid https://github.com/greek1979