@@ -2,6 +2,9 @@
 
 == 4.3.1 or higher - upcoming 
 
+* Make manifest merging less verbose
+** See https://github.com/simpligility/android-maven-plugin/pull/650
+** contributed by Nathan Toone https://github.com/Toonetown
 * Fix building with debug mode and raw file directories
 ** See https://github.com/simpligility/android-maven-plugin/pull/649
 ** contributed by Nathan Toone https://github.com/Toonetown
